# tronix

./: .gitignore  micropython_init.bat  remote-rx_v2.dch  remote-rx_v2.dip  remote3_dcr.7z
144MHz_link/: divider.js  dividerv2.js  pll.asm  pll.dip  pll.hex  rx144_v1.dip  tx144m.dip
CC1101/: CC1101_testboard.dip
USB-DC/: usb-dc.dch  usb-dc.dip
_avr/: avrmake.py  keybindings.json  tasks.json  test.py
_avr_tutorial/: timer_flasher.asm  timer_flasher.hex
_deti/: patterns.dip  valentinka.dip
_diptrace_lib/: acoustics.lib  batteries.lib  breadboard.lib  capacitors.lib  conn_switch.lib  crystals.lib  dane4ka.lib  dtu-home.eli  dtu.eli  g.eli  ics.lib  indication.lib  inductors.lib  modules.lib  resistors.lib  sensors.lib  serenkiy-home.lib  serenkiy.lib  transistors.lib  ~acoustics.lib~  ~batteries.lib~  ~breadboard.lib~  ~capacitors.lib~  ~dtu.eli~  ~ics.lib~  ~resistors.lib~  ~serenkiy.lib~  ~transistors.lib~
_maket/: UFDN6.dip  maket_6x14cm.dip  mixer_heterodyne.dip  soic-14.dip
_scripts/: .~lock.ANT-SHRT.XLS#  ANT-SHRT.XLS  impedance_match.py  rc_filter.py  xtal.html
_tutorial_data/: esp_button_pad.dch  esp_buttons.dch
echolot/firmwarez/esp_test/main/: CMakeLists.txt  chirp.c  chirp.h  common.h  confparser.c  confparser.h  cons.c  cons.h  dsp.c  dsp.h  encoder.c  encoder.h  gen.c  gen.h  gps.c  gps.h  lcd.c  lcd.h  lcd2.c  lcd2.h  lcd_.c  lcd_.h  lib.c  lib.h  main.c  main_prestable.c  main_pushpull.c  recorder.c  recorder.h  sd.c  sd.h  sonar.c  sonar.h  sonar_adc.c  sonar_adc.h  sonar_tx.c  sonar_tx.h  uart_logger.c  uart_logger.h  ui.c  (+7 more)
hui/: hui.asm  (+8 more)
(+721 files in other folders)
